--- a/views/header.html
+++ b/views/header.html
@@ -13,7 +13,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
+			<!-- <ul class="nav navbar-nav">
 				<li class="active"><a href="#">Link</a></li>
 				<li><a href="#">Link</a></li>
 				<li class="dropdown">
@@ -34,19 +34,19 @@
 					<input type="text" class="form-control" placeholder="Search">
 				</div>
 				<button type="submit" class="btn btn-default">Submit</button>
-			</form>
+			</form> -->
 			<ul class="nav navbar-nav navbar-right">
 				<li><p class="navbar-text"> Already have an account?</p></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+					<a href="#/" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 					<ul id="login-dp" class="dropdown-menu">
 						<li>
 							<div class="row">
 								<div class="col-md-12">
 									Login via
 									<div class="social-buttons">
-										<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-										<a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+										<a href="#/" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+										<a href="#/" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
 									</div>
 									or
 									<form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
@@ -70,7 +70,7 @@
 									</form>
 								</div>
 								<div class="bottom text-center">
-									New here? <a href="#"><b>Sign up</b></a>
+									New here? <a href="#/register"><b>Sign up</b></a>
 								</div>
 							</div>
 						</li>
