--- a/views/contact.html
+++ b/views/contact.html
@@ -1,64 +1,65 @@
+<div class="container">
+  <form class="well form-horizontal" id="contact_form">
+    <fieldset>
 
-<form class="well form-horizontal" id="contact_form">
-  <fieldset>
+      <!-- Form Name -->
+      <legend>Contact Us</legend>
 
-    <!-- Form Name -->
-    <legend>Contact Us</legend>
-
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label">First Name</label>  
-      <div class="col-md-4 inputGroupContainer">
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input  name="first_name" placeholder="First Name" class="form-control"  type="text">
+      <!-- Text input-->
+      <div class="form-group">
+        <label class="col-md-4 control-label">First Name</label>  
+        <div class="col-md-4 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input  name="first_name" placeholder="First Name" class="form-control" type="text">
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label" >Last Name</label> 
-      <div class="col-md-4 inputGroupContainer">
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+      <!-- Text input-->
+      <div class="form-group">
+        <label class="col-md-4 control-label" >Last Name</label> 
+        <div class="col-md-4 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Text input-->
-    <div class="form-group">
-      <label class="col-md-4 control-label">E-Mail</label>  
-      <div class="col-md-4 inputGroupContainer">
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+      <!-- Text input-->
+      <div class="form-group">
+        <label class="col-md-4 control-label">E-Mail</label>  
+        <div class="col-md-4 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Text area -->
-    <div class="form-group">
-      <label class="col-md-4 control-label">Comment</label>
-      <div class="col-md-4 inputGroupContainer">
-        <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-          <textarea class="form-control" name="comment" placeholder="Make your suggestions..."></textarea>
+      <!-- Text area -->
+      <div class="form-group">
+        <label class="col-md-4 control-label">Comment</label>
+        <div class="col-md-4 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+            <textarea class="form-control" name="comment" placeholder="Make your suggestions..."></textarea>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Success message -->
-    <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up" ng-show="showme"></i> Thanks for contacting us, we will get back to you shortly.</div>
+      <!-- Success message -->
+      <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up" ng-show="showme"></i> Thanks for contacting us, we will get back to you shortly.</div>
 
-    <!-- Button -->
-    <div class="form-group">
-      <label class="col-md-4 control-label"></label>
-      <div class="col-md-4">
-        <button type="submit" class="btn btn-warning" ng-click="showme=true">Send <span class="glyphicon glyphicon-send"></span></button>
+      <!-- Button -->
+      <div class="form-group">
+        <label class="col-md-4 control-label"></label>
+        <div class="col-md-4">
+          <button class="btn btn-warning" ng-click="showme=true">Send <span class="glyphicon glyphicon-send"></span></button>
+        </div>
       </div>
-    </div>
 
-  </fieldset>
-</form>
+    </fieldset>
+  </form>
+</div>
