--- a/views/custom-calendar.html
+++ b/views/custom-calendar.html
@@ -1,34 +1,39 @@
-<section id="directives-calendar" ng-controller="CalendarCtrl">
-	<div class="well">
-		<div class="col-xs-3">
-			<div>
-				<!-- <ul>
-					<li ng-repeat="e in events" type="info">
-						<b> {{e.title}} </b>
-						<p>{{e.start | date:"dd MMM"}} - {{e.end | date:"dd MMM"}}</p>
-						<p>{{e.timetable}}</p>
-						<p>{{e.price}}</p>
-					</li>
-				</ul> -->
+<div class="container-fluid">
+	<section id="directives-calendar" ng-controller="CalendarCtrl">
 
-				<!-- <ul class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''"><li><p>date.title</p><p>date.location</p></li></ul> -->
-
-			</div>
+		<div style="text-align: center; margin-top: 4em; margin-bottom: 2em;">
+			<h1 style=""><i class="glyphicon glyphicon-calendar"></i> Calendario de eventos</h1>
+			<h4>Consulta los eventos de tu ciudad</h4>
+			<h6>Clica sobre ellos para obtener más información</h6>
 		</div>
-		<div class="col-xs-9" style="background-color: #EEE;">
-			<tabset>
-				<tab active select="renderCalendar('myCalendar');">
-					<tab-heading>
-						<i class="glyphicon glyphicon-bell"></i> Calendario de Eventos
-					</tab-heading>
-					<div class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
-						<h5>{{alertMessage}}</h5>
+
+		<div class="well" style="background-color: #f5f5f5">
+			<div class="col-xs-3">
+				<div>
+					<div class="legend">
+						<div class="box colorSquareMusic"><span style="margin-left: 2.5em;"> Música</span></div>
+						<div class="box colorSquareTheatre"><span style="margin-left: 2.5em;"> Teatro</span></div>
+						<div class="box colorSquareMuseum"><span style="margin-left: 2.5em;"> Exposiciones</span></div>
 					</div>
-					<div class="calendar" ng-model="eventSources" calendar="myCalendar" ui-calendar="uiConfig.calendar" ng-if="eventSources"></div>
 
-				</tab>
-			</tabset>
+					<div class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
+						<h4 style="margin-bottom: 1em;">{{alertMessage.title}}</h4>
+						<p><strong>Fecha: </strong>{{alertaMessagestart}}</p>
+						<p><strong>Horario: </strong>{{alertMessage.timetable}}</p>
+						<p><strong>Ubicación: </strong>{{alertMessage.location}}</p>
+						<p><strong>Precio: </strong>{{alertMessage.price}}</p>
+					</div>
+
+				</div>
+			</div>
+			<div class="col-xs-9" style="background-color: #fff; border-radius: 4px; padding-top:1em; padding-bottom:1em; cursor: pointer;">
+				<tabset>
+					<tab active select="renderCalendar('myCalendar');">
+						<div class="calendar" ng-model="eventSources" calendar="myCalendar" ui-calendar="uiConfig.calendar" ng-if="eventSources"></div>
+					</tab>
+				</tabset>
+			</div>
+			<div class="clearfix"></div>
 		</div>
-		<div class="clearfix"></div>
-	</div>
-</section>
+	</section>
+</div>
