--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,77 @@
+<div class="row">
+	<custom-map></custom-map>
+</div>
+
+<div class="row">
+	<div class="container-fluid">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1" class=""></li>
+				<li data-target="#myCarousel" data-slide-to="2" class=""></li>
+				<li data-target="#myCarousel" data-slide-to="3" class=""></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img class="first-slide" src="img/varios/slider/teatro.jpg" alt="First slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>¡Mantén actualizada tu agenda!</h1>
+							<p>Date de alta para tener acceso a tu lista personalizada con tus eventos favoritos.</p>
+							<p><a class="btn btn-lg btn-primary" href="#/register" role="button">Regístrate</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<img class="second-slide" src="img/varios/slider/concierto.jpg" alt="Second slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>Valora tu experiencia</h1>
+							<p>Comparte tus opiniones sobre las distintas ubicaciones con otros usuarios.</p>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<img class="third-slide" src="img/varios/slider/museo.jpg" alt="Third slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>Negocio, ¿no te encuentras en nuestro mapa?</h1>
+							<p>Ponte en contacto con nosotros para dar de alta tu ubicación, ¡o regístrate para subir tus propios eventos!</p>
+							<p><a class="btn btn-lg btn-primary" href="#/contact" role="button">Contacta</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<img class="fourth-slide" src="img/varios/slider/cine.jpg" alt="Fourth slide">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>Tus películas favoritas, más cerca</h1>
+							<p>Mantente al tanto de la cartelera de tu cine más cercano y añade tus películas favoritas a tu lista personalizada de eventos.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<custom-calendar></custom-calendar>
+</div>
 
 
-<custom-map></custom-map>
 
-<custom-calendar></custom-calendar>
+
+
 
 
 
