--- a/views/locationView.html
+++ b/views/locationView.html
@@ -1,29 +1,29 @@
-<div class="container" ng-controller="LocationViewController">
-	<div class="row">
-		<div class="col s12 m12">
-			<div class="card" ng-repeat = "place in locations | filter : {id: id}">
-				
-				<img class="card-img-top" ng-src="{{place.image}}">
-
-				<div class="card-block">
-					<h3>{{place.name}}</h3>
+<div class="container">
+	<div class="col-md-8 col-md-offset-2 card2">
+		<div ng-repeat = "place in locations | filter : {id: id}">
+			<div class="cardhead" style="background: url('{{place.image}}') no-repeat center top;">
+				<div class="cardtitles">
+					<h3>{{place.name}}</h3>	
+				</div>
+			</div>
+			<div class="cardcontent">
+				<div>
 					<p><strong>Página web:</strong> <a href="{{place.website}}">Website</a></p>
 					<p><strong>Horarios:</strong> <span>{{place.info}}</span></p>
 					<p><strong>Dirección:</strong> <span>{{place.address}}</span></p>
 					<p><strong>Contacto:</strong> <span>{{place.phonenumber}}</span></p>
 				</div>
-
-				<ul ng-repeat="show in place.events" class="list-inline">
-					<li>
+				<section ng-repeat="show in place.events" >
+					<div class="col-md-6 eventCard">
 						<p>{{show.title}}</p>
 						<p>{{show.timetable}}</p>
 						<p>{{show.price}}</p>
-						<p>{{show.start}}</p>
-						<p>{{show.end}}</p>
+						<p>{{show.start | date:'dd MMMM yyyy'}}</p>
+						<p>{{show.end | date:'dd MMMM yyyy'}}</p>
 						<button>Añadir a mi lista</button>
-					</li>
-				</ul>	
-			</div>
+					</div>
+				</section>
+			</div>	
 		</div>
 	</div>
 </div>
