--- a/views/register.html
+++ b/views/register.html
@@ -1,37 +1,73 @@
-<form name="userForm" ng-submit="submitForm()" novalidate style="width: 50%" class="well form-horizontal" id="contact_form">
+<div class="container">
+    <form class="well form-horizontal" id="contact_form" name="userForm" ng-submit="submitForm()" novalidate>
+        <fieldset>
+            <legend>Register Now</legend>
 
-    <fieldset>
-        <legend>Register Now</legend>
+            <!-- NAME -->
+            <div class="form-group" ng-class="{ 'has-error' : userForm.name.$invalid && !userForm.name.$pristine }">
+                <label class="col-md-4 control-label">Name</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="name" class="form-control" ng-model="user.name" placeholder="Name" required>
+                        <p ng-show="userForm.name.$invalid && !userForm.name.$pristine" class="help-block">You name is required.</p>
+                    </div>
+                </div>  
+            </div>
 
-        <!-- NAME -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.name.$invalid && !userForm.name.$pristine }">
-            <input type="text" name="name" class="form-control" ng-model="user.name" placeholder="Name" required>
-            <p ng-show="userForm.name.$invalid && !userForm.name.$pristine" class="help-block">You name is required.</p>
-        </div>
+            <!-- USERNAME -->
+            <div class="form-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
+                <label class="col-md-4 control-label">Username</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="3" ng-maxlength="8" placeholder="Username" required>        
+                    </div>
+                    <p ng-show="userForm.username.$error.minlength" class="help-block">Username is too short.</p>
+                    <p ng-show="userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+                </div>   
+            </div>
 
-        <!-- USERNAME -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
-            <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="3" ng-maxlength="8" placeholder="Username" required>
-            <p ng-show="userForm.username.$error.minlength" class="help-block">Username is too short.</p>
-            <p ng-show="userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-        </div>
+            <!-- EMAIL -->
+            <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
+                <label class="col-md-4 control-label">E-Mail</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input type="email" name="email" class="form-control" ng-model="user.email" placeholder="Email" required>   
+                    </div>
+                    <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
+                </div>   
+            </div>
 
-        <!-- EMAIL -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
-            <input type="email" name="email" class="form-control" ng-model="user.email" placeholder="Email" required>
-            <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
-        </div>
+            <!-- PASSWORD -->
+            <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
+                <label class="col-md-4 control-label">Password</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="password" id="password" class="form-control" ng-model="user.password" placeholder="Password" required>
+                    </div>
+                </div>     
+            </div>
 
-        <!-- PASSWORD -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
-            <input type="password" name="password" id="password" class="form-control" ng-model="user.password" placeholder="Password" required>
-        </div>
-
-        <div class="form-group">
-            <input type="password" name="confirm-password" id="confirm-password" class="form-control" tabindex="2" class="form-control" placeholder="Confirm Password" required>
-        </div>
-
-        <button type="submit" class="btn btn-primary" ng-disabled="userForm.$invalid">Submit</button>
-    </fieldset>  
-</form>
+            <div class="form-group">
+                <label class="col-md-4 control-label">Confirm password</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="confirm-password" id="confirm-password" class="form-control" tabindex="2" class="form-control" placeholder="Confirm Password" required>
+                    </div>
+                </div>   
+            </div>
+            
+            <div class="form-group">
+                <label class="col-md-4 control-label"></label>
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-primary" ng-disabled="userForm.$invalid">Submit</button>
+                </div>
+            </div> 
+        </fieldset>  
+    </form>
+</div>
 
