--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default">
 	<div class="container-fluid">
 		<p class="navbar-text pull-left">© 2016 - Site built by zFlopez.
-			<a href="https://github.com/zflopez" target="_blank"><img src="img/varios/github.png" alt="githublogo" width="25" height="25" style="margin-left: 0.5em;"></a>
+			<a href="https://github.com/zflopez" target="_blank"><img src="img/varios/github.png" alt="githublogo" width="25" height="25" class="githubLink"></a>
 		</p>
 
 		<a href="#/contact/" class="navbar-btn btn-danger btn pull-right">
