--- a/views/home.html
+++ b/views/home.html
@@ -18,7 +18,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>¡Mantén actualizada tu agenda!</h1>
-							<p>Date de alta para tener acceso a tu lista personalizada con tus eventos favoritos.</p>
+							<h4>Date de alta para tener acceso a tu lista personalizada con tus eventos favoritos.</h4>
 							<p><a class="btn btn-lg btn-primary" href="#/register" role="button">Regístrate</a></p>
 						</div>
 					</div>
@@ -28,7 +28,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Valora tu experiencia</h1>
-							<p>Comparte tus opiniones sobre las distintas ubicaciones con otros usuarios.</p>
+							<h4>Comparte tus opiniones sobre las distintas ubicaciones con otros usuarios.</h4>
 						</div>
 					</div>
 				</div>
@@ -37,7 +37,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Negocio, ¿no te encuentras en nuestro mapa?</h1>
-							<p>Ponte en contacto con nosotros para dar de alta tu ubicación, ¡o regístrate para subir tus propios eventos!</p>
+							<h4>Ponte en contacto con nosotros para dar de alta tu ubicación, ¡o regístrate para subir tus propios eventos!</h4>
 							<p><a class="btn btn-lg btn-primary" href="#/contact" role="button">Contacta</a></p>
 						</div>
 					</div>
@@ -47,7 +47,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Tus películas favoritas, más cerca</h1>
-							<p>Mantente al tanto de la cartelera de tu cine más cercano y añade tus películas favoritas a tu lista personalizada de eventos.</p>
+							<h4>Mantente al tanto de la cartelera de tu cine más cercano y añade tus películas favoritas a tu lista personalizada de eventos.</h4>
 						</div>
 					</div>
 				</div>
