--- a/views/custom-map.html
+++ b/views/custom-map.html
@@ -1,37 +1,24 @@
 <div class="container-fluid">
 	<div ng-controller="loadMapController">
 		
-		<section style="text-align: center; margin-top: 3em;">
+		<section class="mapHeader">
 			<h1><i class="glyphicon glyphicon-map-marker"></i> ¿Qué buscas?</h1>
-			<h4>Encuentra los puntos más cercanos según tus preferencias</h4>
-			<h6>Clica sobre ellos para obtener más información</h6>
+			<h3>Encuentra los puntos más cercanos según tus preferencias</h3>
+			<h4>Clica sobre ellos para obtener más información</h4>
 
-			<select id="dropdown" ng-model="categoryOrder" class="form-control selectpicker" style="width: 20em; display: block; margin: 1em auto;">
+			<select id="dropdown" ng-model="categoryOrder" class="form-control selectpicker">
 				<option value="0">Todos</option>
 				<option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
 			</select>
 		</section>
 		
-		<div class="well" style="background-color: #f5f5f5">
+		<div class="well mapBox">
 			<ui-gmap-google-map center='map.center' zoom='map.zoom' aria-label="Google map" pan="true">
-
-			<!-- <ui-gmap-markers models="map.markers" idKey="'id'" coords="'self'" events="map.markersEvents">
-				<ui-gmap-window show="map.window.show" coords="map.window.model" ng-cloak>
-					<div>
-						<p><img ng-src="{{image}}" alt="{{name}}" style="width: 200px; height: 150px; border-radius: 5px;"></p>
-						<p><strong>{{name}}</strong></p>
-						<p>{{address}}</p>
-						<p><a ng-href="{{website}}">Website</a></p>
-						<p><span class="glyphicon glyphicon-plus"> </span><a href="#/"> Profile</a></p>
-					</div>
-				</ui-gmap-window>
-			</ui-gmap-markers> -->
-			
 
 				<ui-gmap-marker ng-repeat="marker in locations | filter:categoryOrder" coords="{latitude: marker.latitude, longitude: marker.longitude}" options="marker.options" events="map.markersEvents" idkey="marker.id" >
 					<ui-gmap-window ng-cloak>
 						<div class="markerWindow">
-							<p><img ng-src="{{marker.image}}" alt="{{marker.name}}" style="width: 200px; height: 150px; border-radius: 5px;"></p>
+							<p><img ng-src="{{marker.image}}" alt="{{marker.name}}" class="markerImage"></p>
 							<p><strong>{{marker.name}}</strong></p>
 							<p>{{marker.address}}</p>
 							<p><i class="fa fa-external-link" aria-hidden="true"></i><a ng-href="{{marker.website}}"> Página web</a></p>
@@ -43,18 +30,6 @@
 			</ui-gmap-google-map>
 		</div>
 
-
-		<!-- <ul>
-			<li ng-repeat="location in locations | filter:categoryOrder" ng-class="{selected: location == map.window.model}" ng-click="map.window.model = location">
-				<p>{{location.name}}</p>
-			</li>
-		</ul> -->
-
-		<ul class="list-inline">
-			<li class="location-list" ng-repeat="location in locations | filter:categoryOrder">
-				<p>{{location.name}}</p>
-			</li>
-		</ul>
 	</div>
 </div>
 
